--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "psr-0": {
             "PayPal": "lib/"
         }
+    },
+    "replace": {
+        "paypal/rest-api-sdk-php": "1.*"
     }
 }
